--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,41 @@ button {
     font-size: 14px;
     border-radius: 4px;
     flex-shrink: 0;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
+
+.content-cards {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 12px;
+    flex-wrap: wrap;
+    margin: 24px auto;
+}
+
+.card {
+    display: flex;
+    flex: 0 1 auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    max-width: 250px;
+}
+
+.img {
+    width: 200px;
+    height: 200px;
+    background-color: #3882f6;
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+.subtext {
+    color: #1F2937;
+    font-size: 14px;
+}
+
 
 .quote-section {
     background-color: #E5E7EB;
